// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with an expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     expenses totalling 
    $8.29
     
  </h1>
</div>
`;
